app-deployments/landing-app.yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-svc
  namespace: landing-app
spec:
  selector:
    app: landing
  ports:
    - name: http
      port: 80
      targetPort: http
